# xfce4-cpu-plugin

./: Makefile.am  README.md
src/: Makefile.am  xfce4-cpu-plugin.c  xfce4-cpu-plugin.desktop.in
xfce4-cpu-plugin/: Makefile  config.status  configure  configure.ac  libtool
xfce4-cpu-plugin/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2
xfce4-cpu-plugin/src/: Makefile  Makefile.am  Makefile.in  libxfce4-cpu-plugin.la  libxfce4_cpu_plugin_la-xfce4-cpu-plugin.lo  xfce4-cpu-plugin.c  xfce4-cpu-plugin.desktop
